--- a/src/components/tracks/Style.css
+++ b/src/components/tracks/Style.css
@@ -26,3 +26,13 @@
 .small {
   width: 100px;
 }
+
+.heading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.heading .music {
+  font-size: 100px;
+}
